<resources>
    <string name="app_name">FinalWorkJonathanDeWit</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="loginButton">Continue</string>
    <string name="manyWrongAttemps">Too many wrong attempts please try again later</string>
    <string name="userAndPasswordNotMatch">Incorrect username or password</string>
    <string name="loginError">An error has occurred. Please try again</string>
    <string name="UnauthorizedError">Unauthorized Access</string>
    <string name="first_name">First name:</string>
    <string name="first_name_regist">First name</string>
    <string name="last_name">Last name:</string>
    <string name="last_name_regist">Last name</string>
    <string name="email">Email:</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="profile">Profile</string>
    <string name="please_enter_your_password">Please enter your password to validate your choice</string>
    <string name="password">Password</string>
    <string name="delete_profile">Delete profile</string>
    <string name="cansel">Cansel</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="user_is_deleted">Account is successfully deleted</string>
    <string name="error_user_is_deleted">Error during account delete</string>
    <string name="registration">Registration</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_email_adress">Enter your email adress</string>
    <string name="email_adress">Email adress</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm_npassword">Confirm\nPassword</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_empty_fields">No field can be empty</string>
    <string name="same_password">Password and Confirm Password do not match</string>
    <string name="logout_button_description">Button to log out</string>
    <string name="activate_the_system">Activate the system</string>
    <string name="turn_off_the_system">turn off the system</string>
    <string name="unable_to_get_system_state">Unable to get system state</string>
    <string name="unable_to_change_system_state">Unable to change system state</string>
    <string name="loading">Loading...</string>
    <string name="device_type">Device type:</string>
    <string name="watch_live">Watch live</string>
    <string name="edit_hub">Edit hub</string>
    <string name="edit_camera">Edit Camera</string>
    <string name="camera_not_online">Video not available</string>
    <string name="device_location">Device location: </string>
    <string name="camera_is_transmitting">Camera is transmitting</string>
    <string name="camera_is_not_transmitting">Camera is not Transmitting</string>
    <string name="recieve_video_signal">: receive video signal</string>
    <string name="video_signal_received_from_cameras">Video signal received from cameras:</string>
    <string name="video_signal_not_received_from_cameras">Video signal not received from cameras:</string>
    <string name="device_name">Device name:</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="device_location_edit">Device location:</string>
    <string name="enter_device_location">Enter device location</string>
    <string name="save_changes">Save changes</string>
    <string name="update_succeed">Update succeed</string>
    <string name="update_failed">Update failed</string>
    <string name="adding_device_succeed">Adding device succeed</string>
    <string name="adding_device_failed">Adding device failed</string>
    <string name="add_device">Add device</string>


</resources>